# nextjs-mdx-blog

./: .gitignore  .stylelintrc.json  CLAUDE.md  README.md  contentlayer.config.ts  learn.md  next.config.js  package-lock.json  package.json
.github/workflows/: ci-cd.yml
.trae/documents/: Implement Double-Click Logo Navigation Bar.md  plan_20260131_031230.md  为技术博客专栏添加透明浅色背景图片.md  在博客专栏页面添加前端搜索功能.md  文章末尾添加AI出题测试功能.md  集成GitHub评论功能.md
doc/: progress.md  开发规划.md  技术选型.md  模块开发方案.md  简历.md  需求分析.md
public/: interview-speech-1h.md  interview-speech-final.md  interview-speech-v2.md  interview-speech.md
public/html/软件工程期中考课程设计/: index.html  stage1-infrastructure.html  stage2-user.html  stage3-blockchain.html  stage4-chat.html  stage5-frontend.html  stage6-integration.html
public/images/hutool/: .gitkeep  README.md
public/md/.claude/: settings.json
public/md/.claudian/: claudian-settings.json
public/md/.obsidian/: community-plugins.json  graph.json  workspace.json
public/md/00.随笔记录/: 笔记规范.md
public/md/02.计算机基础/计算机网络/Homework/homework1/: CMakeLists.txt  README.md  webget.cpp
public/md/02.计算机基础/计算机网络/Homework/homework2/: CMakeLists.txt  reliable_byte_stream.cpp  reliable_byte_stream.h  reliable_byte_stream_test.cpp
public/md/02.计算机基础/计算机网络/Homework/homework3/: CMakeLists.txt  README.md  tcp_sender.c  tcp_sender.h  tcp_sender_test.c
public/md/04.算法数据结构/: JAVA_Stack.md  JAVA_Tree.md  JAVA算法.md  Java_Array.md  Java_LinkedList.md  常用算法模版.md
public/md/05.项目实战/Go项目/内存缓存系统/minidistcache/: CMakeLists.txt  Makefile  cache.conf
public/md/05.项目实战/Go项目/内存缓存系统/minidistcache/src/: client.c  config.c  ds.c  main.c  minidistcache.h  persist.c  server.c  utils.c
public/md/06.软件开发/: 基本流程.md
public/md/1.Java基础/: 00我的15天Java重生之旅：从HelloWorld到能造轮子的蜕变实录.md  00重塑你的Java知识树：从“会用”到“精通”的认知升级路线图.md  01重走我的Java Day1：那些新手必踩的坑与救命的心法.md  03重走我的Java Day03：流程控制——从“能运行”到“写得好”的分水岭.md  08重走Java Day08：从“语法学究”到“架构叛徒”：我是如何用函数式编程重构千行垃圾代码的.md  09银行系统项目复盘：从学生作业到生产级别的三次架构演变.md  10重走我的Java Day10:我是如何用一场线上事故，彻底理解Java异常、泛型和集合的.md  11重走我的Java Day11:从“数据泥潭”到“数据流道”：我如何用Stream+Map+Set重构电商系统的“屎山”代码.md  12 重走我的Java Day12:那个让公司损失百万的“小文件”：我是如何用递归和IO流拯救一个濒临崩溃的日志系统.md  13重走我的Java Day13:那个让系统瘫痪的并发bug：我是如何从一个死锁问题中学会多线程的.md  14聊天项目复盘:我的第一个聊天室，在演示现场崩溃了.md  14重走我的Java Day14 :网络编程：从“聊天室玩具”到“百万并发网关”的惊魂一夜.md  15重走我的Java Day15:当我的代码突然有了“读心术”：反射和注解的魔法之旅.md  Java基础完整笔记（已整理）.md  【Java +AI  ｜基础篇day1】.md  【Java +AI ｜基础篇day10 异常、泛型、集合】.md  【Java +AI ｜基础篇day11 Set、Map、Stream】.md  【Java +AI ｜基础篇day12 File、递归、IO流】.md  【Java +AI ｜基础篇day13 多线程】.md  【Java +AI ｜基础篇day14 网络编程】.md  【Java +AI ｜基础篇day14 项目实战 Socket聊天室】.md  【Java +AI ｜基础篇day15 单元测试、反射、注解、动态代理】.md  【Java +AI ｜基础篇day2 方法、类型转换、运算符核心】.md  【Java +AI ｜基础篇day3 流程控制】.md  【Java +AI ｜基础篇day4 数组】.md  【Java +AI ｜基础篇day5 面向对象基础】.md  【Java +AI ｜基础篇day6 继承 + 多态 + final + 单例模式】.md  【Java +AI ｜基础篇day7 抽象类 + 接口 + 代码块 + 内部类】.md  【Java +AI ｜基础篇day8 函数式编程 + 常用 API 】.md  【Java +AI ｜基础篇day9 项目实战 银行管理系统】.md  【Java基础 ｜核心知识点归纳】.md  【Java基础｜拓展项目 Java +Socket +Swing聊天室】.md
public/md/2.JavaWeb/: 18我的第一个员工管理系统，差点让我丢了工作.md  20我的第一个上线项目：从"本地跑通"到"用户能用".md  day17.md  day18.md  day19.md  day20.md  【JavaWeb ｜ day16 Web前端基础】.md  【JavaWeb ｜ day17 Web后端基础】.md  【JavaWeb ｜ day18 Web后端实战】.md  【JavaWeb ｜ day19 Web后端进阶】.md  【JavaWeb ｜ day20 Web前端实战 项目部署】.md
public/md/3.瑞吉外卖/: 21我的第二个上线项目：从"本地王者"到"服务器乞丐".md  (+5 more)
public/md/元婴・灵宝秘藏/: 插件.md  (+2 more)
src/app/: global.css  layout.tsx  page.tsx  sitemap.ts
src/components/: Container.tsx  CustomCursor.tsx  EasterEgg.tsx  ExpandingNavBar.tsx  GlassCard.tsx  GlobalComponents.tsx  GlobalComponentsWrapper.tsx  HeaderWithDoubleClick.tsx  Hero3DBackground.tsx  MouseParallax.tsx  Navigation.tsx  PageTransition.tsx  RouteGuard.tsx  ScrollAnimation.tsx  ThemeSwitch.tsx  ThreeDCarousel.tsx
src/data/: experience.ts  profile.ts  projects.ts  site.ts  skills.ts  social.ts
src/hooks/: useArticle.ts  useConfig.ts  useToc.ts
src/lib/: blog.ts  constants.ts
src/services/: api.ts  cache.ts  fallback.ts  index.ts  types.ts
src/temp/: InterviewPresentation.tsx
src/utils/: lastVisited.ts
(+475 files in other folders)
